[package]
name = "yt-extractor"
version = "0.1.0"
edition = "2024"

[dependencies]
lazy_static = "1.5.0"
once_cell = "1.21.3"
reqwest = { version = "0.12.25", default-features = false, features = ["rustls-tls"] }
swc_common = "18.0.1"
swc_ecma_ast = "19.0.0"
swc_ecma_codegen = "21.0.0"
swc_ecma_parser = "29.0.1"
swc_ecma_visit = "19.0.0"
tokio = "1.48.0"
v8 = "142.2.0"
